style: correct z-index error and too much space under piano at play.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,10 +61,10 @@ body {
   border-radius: 5px;
   padding: 5% 0;
   font-family: 'Grandstander', cursive;
-  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.4);
+  text-shadow: 2px 2px 2px rgb(0, 0, 0);
   border-top: 1px solid rgb(176, 202, 61);
   border-bottom: 1px solid rgb(42, 63, 19);
-  background: linear-gradient(rgba(110, 141, 0, .7), rgba(76, 97, 0, 0.7));
+  background-image: linear-gradient(rgba(110, 141, 0, .9), rgba(76, 97, 0, .9));
   box-shadow:2px 1px 5px black;
   text-decoration: none;
   color:rgb(224, 204, 182);
@@ -79,7 +79,7 @@ body {
 .button:active {
   border-top: 1px solid rgb(42, 63, 19);
   border-bottom: 1px solid rgb(104, 119, 38);
-  background: linear-gradient(rgba(114, 133, 49, 0.7), rgba(82, 99, 23, 0.7));
+  background-image: linear-gradient(rgba(114, 133, 49, .7), rgba(82, 99, 23, .7));
 }
 
 .button-home {
@@ -154,8 +154,7 @@ footer a {
   clear: both;
   position: relative;
   height: 50%;
-  padding: 15px;
-  width: 100%;
+  width: 95%;
   max-width: 500px;
   background-color:rgb(224, 204, 182);
   text-align: center;
@@ -228,24 +227,18 @@ footer a {
 
 /* play.html */
 
-#play-box {
-  margin: 20px auto;
-  display: flex;
-  width: 95%;
-  max-width: 500px;
-  text-align: center;
-}
-
 #piano-container {
-  display: flex;
-  height: 450px;
+  position: relative;
+  display: inline-flex;
+  height: 25vh;
   max-width: 800px;
   width: 95%;
   margin: 0 auto;
+  background-color: blue;
 }
 
 .key {
-  height: calc(var(--width) * 5);
+  height: 100%;
   width: var(--width);
 }
 
@@ -261,10 +254,11 @@ footer a {
 
 .black {
   --width: 4.28%;
+  height: 63%;
   margin-left: -2.14%;
   margin-right: -2.14%;
   background-color: #2a2a2a;
-  z-index: 2;
+  z-index: 1;
 }
 
 .black.active {
